--- a/trunk/webapps/root/form.html
+++ b/trunk/webapps/root/form.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h2>Form!</h2>
-<form action="http://localhost:8888/form" method="POST">
+<form action="http://localhost:8888/root/form.html" method="GET">
 name: <input type="text" value="ou" name="name"><br>
 password: <input type="text" value="123456" name="password"><br>
 <input type="submit" value="submit">
